# django-blueprint-generic-views

./: .gitignore  Makefile  README.md  pyproject.toml
backend/source/django_blueprint/: manage.py
backend/source/django_blueprint/django_blueprint/: asgi.py  urls.py  wsgi.py
backend/source/django_blueprint/django_blueprint/settings/: base.py  development.py  development_docker.py  development_local.py  production.py  secret_key.py
backend/source/django_blueprint/main/: admin.py  models.py  urls.py  views.py
backend/source/django_blueprint/main/migrations/: 0001_main_initial.py
backend/source/django_blueprint/main/templates/main/: back_office.html  home.html  main_list.html
backend/source/django_blueprint/templates/: base.html  registration.html  startup.html
backend/source/django_blueprint/templates/registration/: login.html
